--- a/index.html
+++ b/index.html
@@ -142,8 +142,6 @@
             width: 200px;
             height: 100px;
         }
-
-
     </style>
 
 </head>
@@ -167,7 +165,6 @@
     <div class="section">
         <div class="center">
             <h1>만나서 방가방가~~!ㅎㅎ</h1>
-            <img src="images/20150915_154041.png" style="width: 30%; height: 30%;"/>
         </div>
     </div>
     <div class="section">
@@ -178,7 +175,7 @@
     <div class="section">
         <div class="center">
             <h1>벌써 우리 결혼이 많이 가까워졌겠다..</h1>
-            <img src="images/20150915_154147.png" style="width: 30%; height: 30%;"/>
+            <!--<img src="images/20150915_154147.png" style="width: 30%; height: 30%;"/>-->
         </div>
     </div>
     <div class="section">
@@ -195,7 +192,7 @@
     <div class="section">
         <div class="center">
             <h1>아쉽기도 하고</h1>
-            <img src="images/20150915_153518.png" style="width: 30%; height: 30%;"/>
+            <!--<img src="images/20150915_153518.png" style="width: 30%; height: 30%;"/>-->
         </div>
     </div>
     <div class="section">
@@ -207,13 +204,13 @@
     <div class="section">
         <div class="center">
             <h1>준비해 봤는데..ㅎㅎ</h1>
-            <img src="images/20150915_153818.png" style="width: 30%; height: 30%;"/>
+            <img src="images/20150911_201242.png" style="width: 30%; height: 30%;"/>
         </div>
     </div>
     <div class="section">
         <div class="center">
             <h1>너무 실망하지 않아야 할텐데..</h1>
-            <img src="images/20150915_154405.png" style="width: 30%; height: 30%;"/>
+            <img src="images/20150911_201304.png" style="width: 30%; height: 30%;"/>
         </div>
     </div>
     <div class="section">
@@ -223,24 +220,24 @@
     </div>
     <div class="section">
         <div class="center">
-            <h1>전에 사진 정리하면서도..</h1>
-            <img src="images/20150915_154509.png" style="width: 30%; height: 30%;"/>
+            <h1>얼마전 사진 정리하면서도..</h1>
+            <!--<img src="images/20150915_154509.png" style="width: 30%; height: 30%;"/>-->
         </div>
     </div>
     <div class="section">
         <div class="center">
-            <h1>우리가 같이 지낸 동안..</h1>
+            <h1>우리가 같이..</h1>
         </div>
     </div>
     <div class="section">
         <div class="center">
-            <h1>함께 많은 것을 <br/>나눴구나 라고 했잖아..</h1>
+            <h1>많은 것을 <br/>나눴구나 라고 느꼈는데..</h1>
         </div>
     </div>
     <div class="section">
         <div class="center">
             <h1>싸우기도 많이하고</h1>
-            <video id="video2"  controls muted loop autoplay>
+            <video id="video2"  muted loop autoplay>
                 <source src="images/IMG_6081.m4v">
                 sorry...
             </video>
@@ -249,7 +246,7 @@
     <div class="section">
         <div class="center">
             <h1>재밌던 일도 많고</h1>
-            <video id="video3" controls muted loop autoplay>
+            <video id="video3" muted loop autoplay>
                 <source src="images/IMG_5882.m4v">
                 sorry...
             </video>
@@ -334,7 +331,7 @@
     <div class="section">
         <div class="center">
             <h1>서로 서로 의지 하며..</h1>
-            <video id="video1" controls muted loop autoplay>
+            <video id="video1" muted loop autoplay>
                 <source src="images/IMG_5871.m4v">
                 sorry...
             </video>
@@ -395,7 +392,6 @@
     </div>
 
     <div class="section">
-        <!--<div class="center" style="background: url('images/');">-->
         <div class="center">
             <h1>나랑 결혼해 줄래요?</h1>
             <div id="yes"><h1>Yes</h1></div>
