이미지 추가 문구 수정

--- a/index.html
+++ b/index.html
@@ -154,6 +154,11 @@
     </div>
     <div class="section">
         <div class="center">
+            <h1>어느 개발자의 이야기래~</h1>
+        </div>
+    </div>
+    <div class="section">
+        <div class="center">
             <h1>안녕..</h1>
         </div>
     </div>
