--- a/index3.html
+++ b/index3.html
@@ -57,9 +57,15 @@
     </svg>
     <div id="pattern1" class="centered " data-2500=" height:100%; " data-3500="height:0%;"></div>
     <div id="pattern2" class="centered"></div>
-    <div id="wish3" class="centered" data-4000="width:0px; height:0px;" data-6000="width:600px; height:600px; "></div>
-    <div id="wish4" class="centered" data-4000="height:0px;" data-5000="height:600px; ">
+    <div id="wish3" class="centered" data-4000="width:0px; height:0px;" data-8000="width:600px; height:600px; "></div>
+    <div class="wish4 centered" data-4000="height:0px;" data-5000="height:600px; ">
+        <h1>당신만을..</h1>
+    </div>
+    <div class="wish4 centered" data-5000="height:0px;" data-6000="height:500px; ">
         <h1>사랑합니다..</h1>
+    </div>
+    <div class="wish4 centered" data-6000="height:0px;" data-7000="height:400px; ">
+        <h1>평생토록..</h1>
     </div>
 </div>
 
