--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
     <div class="section">
         <div class="center">
             <h1>많은 것을 <br/>나눴구나 라고 느꼈는데..</h1>
+            <img src="images/aaa.JPG" style="width: 30%; height: 30%;"/>
         </div>
     </div>
     <div class="section">
